--- a/Hotel/Views/Home/AdminEditProfile.cshtml
+++ b/Hotel/Views/Home/AdminEditProfile.cshtml
@@ -129,7 +129,7 @@
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "Action")
     </div>
 </body>
 </html>
